smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-with-invalid-identifier-key.smithy
// Syntax error at line 2, column 13: Expected EQUAL('=') but found DOT('.') | Model
metadata foo.bar = "baz"
